[package]
name = "itm-demo"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"

panic-itm = "0.4.0"

[dependencies.stm32f4]
version = "0.9.0"
features = ["stm32f407", "rt"]